player visible and moving

--- a/index.html
+++ b/index.html
@@ -8,29 +8,27 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-
     <div class="containAll">
       <div id="leftDiv">
         <h1>Name of game TBD</h1>
         <p>
           <ul>
-            <li>- Get all the bags </li>
-            <li>- Be careful not to bum into the whatevs</li>
-            <li>- Beware of the enemy</li>
-            <li>- Use the arrow keys on your keyboard to move around</li>
+            <li>Get all the items </li>
+            <li>Be careful not to bump into the bad items</li>
+            <li>Beware of the enemy</li>
+            <li>Use the arrow keys on your keyboard to move around</li>
           </ul>
         </p>
     </div>
-
     <div id="middleDiv">
       <div class="container"><div class="grid"></div></div>
-      <div class="bottomBar"><p>Press play to enter</p></div>
+      <button>Press play to enter</button>
     </div>
     
     <div id="rightDiv">
-      <img class="rightSection" id="playerImg"src="Frog-Meme-PNG-Transparent.png" alt="frog image">
-      <div class="rightSection "id="itemsCount"><p>Bags: <span id="itemsCaught">0</span> / <span id="itemsTotal">5</span></p></div>
-      <div class="rightSection" id="lifeBar">Life</div>
+      <img class="rightSection" id="defaultPic"src="img/unknown-person-icon-27.jpg" alt="don">
+      <div class="rightSection "id="itemsCount"><p>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">5</span></p></div>
+      <div class="rightSection" id="lifeBar">Life Level</div>
     </div>
 
     <script src="./main.js"></script>
