--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <div id="rightDiv">
       <img class="rightSection" id="defaultPic"src="img/unknown-person-icon-27.jpg" alt="don">
-      <div class="rightSection "id="itemsCount"><p>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">5</span></p></div>
+      <div class="rightSection "id="itemsCount"><h3>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">5</span></h3></div>
       <div class="rightSection" id="lifeBar">Life Level</div>
     </div>
 
