problem of enemy not going left fixed

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     
     <div id="rightDiv">
       <img class="rightSection" id="defaultPic"src="img/unknown-person-icon-27.jpg" alt="don">
-      <div class="rightSection "id="itemsCount"><h3>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">5</span></h3></div>
-      <div class="rightSection" id="lifeBar">Life Level</div>
+      <div class="rightSection "id="itemsCount"><h3>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">8</span></h3></div>
+      <div class="rightSection" id="lifeBar"></div>
     </div>
 
     <script src="./main.js"></script>
