Door appears on grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+
     <div class="containAll">
       <div id="leftDiv">
         <h1>Name of game TBD</h1>
@@ -30,6 +31,16 @@
       <div class="rightSection "id="itemsCount"><h3>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">8</span></h3></div>
       <div class="rightSection" id="lifeBar"></div>
     </div>
+
+    <!-- POP UP FOR GAME OVER
+    <section class="popUp">
+      <div class="popUpContent">
+        <p>MY POP UP</p>
+        <button class="start" id="start">START GAME</button>
+      </div>
+    </section>
+    <script src="../PopUp/popUp.js"></script> -->
+
 
     <script src="./main.js"></script>
 
