create pop ups for end of game

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="containAll">
       <div id="leftDiv">
         <h1>Name of game TBD</h1>
-        <p>
+        <p><article>Go steal Liz's hats </article>
           <ul>
             <li>Get all the items </li>
             <li>Be careful not to bump into the bad items</li>
@@ -32,14 +32,17 @@
       <div class="rightSection" id="lifeBar"></div>
     </div>
 
-    <!-- POP UP FOR GAME OVER
-    <section class="popUp">
+    <!-- POP UP-->
+    <section class="popUp hidden">
       <div class="popUpContent">
-        <p>MY POP UP</p>
-        <button class="start" id="start">START GAME</button>
+        <p class="gameover">GAME OVER</p>
+        <button class="tryagain" id="tryagain">TRY AGAIN</button>
       </div>
     </section>
-    <script src="../PopUp/popUp.js"></script> -->
+    <audio src=""></audio>
+    <audio src=""></audio>
+    <audio src=""></audio>
+    <script src="../PopUp/popUp.js"></script> 
 
 
     <script src="./main.js"></script>
