--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="containAll">
       <div id="leftDiv">
         <h1>Name of game TBD</h1>
-        <p><article>Go steal Liz's hats </article>
+        <p>
           <ul>
             <li>Get all the items </li>
             <li>Be careful not to bump into the bad items</li>
@@ -23,12 +23,12 @@
     </div>
     <div id="middleDiv">
       <div class="container"><div class="grid"></div></div>
-      <button>Press play to enter</button>
+      <!-- <button>Press play to enter</button> -->
     </div>
     
     <div id="rightDiv">
       <img class="rightSection" id="defaultPic"src="img/unknown-person-icon-27.jpg" alt="don">
-      <div class="rightSection "id="itemsCount"><h3>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">8</span></h3></div>
+      <div class="rightSection "id="itemsCount"><h3>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">15</span></h3></div>
       <div class="rightSection" id="lifeBar"></div>
     </div>
 
@@ -42,8 +42,7 @@
     <audio src=""></audio>
     <audio src=""></audio>
     <audio src=""></audio>
-    <script src="../PopUp/popUp.js"></script> 
-
+    <!-- <script src="../PopUp/popUp.js"></script>  -->
 
     <script src="./main.js"></script>
 
