--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <div class="containAll">
       <div id="leftDiv">
-        <h1>Name of game TBD</h1>
+        <h1>T B D </h1>
         <p>
           <ul>
-            <li>Get all the items </li>
-            <li>Be careful not to bump into the bad items</li>
-            <li>Beware of the enemy</li>
-            <li>Use the arrow keys on your keyboard to move around</li>
+            <li>Use arrow keys to move</li>
+            <li>Go get all the corgis </li>
+            <li>Don't get caught by Queenie!</li>
+            <li>Go through Monica's door and win</li>
           </ul>
         </p>
     </div>
@@ -27,19 +27,19 @@
     </div>
     
     <div id="rightDiv">
-      <img class="rightSection" id="defaultPic"src="img/unknown-person-icon-27.jpg" alt="don">
-      <div class="rightSection "id="itemsCount"><h3>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">23</span></h3></div>
-      <div class="rightSection" id="lifeBar"></div>
+      <img class="rightSection" id="defaultPic"src="img/trump.png" alt="don">
+      <div class="rightSection "id="itemsCount"><h3>Items: <span id="itemsCaught">0</span> / <span id="itemsTotal">15</span></h3></div>
+      <!-- <div class="rightSection" id="lifeBar"></div> -->
     </div>
 
     <!-- POP UP-->
     <section class="popUp hidden">
       <div class="popUpContent">
-        <p class="gameover">GAME OVER</p>
+        <h2 class="gameover">FAKE NEWS</h2>
         <button class="tryagain" id="tryagain">TRY AGAIN</button>
       </div>
     </section>
-    <audio src=""></audio>
+    <audio controls class="fakenews" src="audio/you-are-fake-news_P60g69k.mp3"></audio>
     <audio src=""></audio>
     <audio src=""></audio>
     <!-- <script src="../PopUp/popUp.js"></script>  -->
