before creating classes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       </div>
       <div id="middleDiv">
         <div class="container"><div class="grid"></div></div>
-        <!-- <button>Press play to enter</button> -->
       </div>
 
       <div id="rightDiv">
@@ -48,8 +47,24 @@
       </section>
       <audio controls class="fakenews" src="audio/fakenews.mp3"></audio>
       <audio controls class="goodjob" src="audio/good-job_Bbr5WOK.mp3"></audio>
-      <audio src=""></audio>
-      <!-- <script src="../PopUp/popUp.js"></script>  -->
+      <audio
+        controls
+        class="winsound"
+        src="audio/mixkit-video-game-treasure-2066.wav"
+      ></audio>
+      <audio
+        controls
+        class="launch"
+        src="audio/sfx_patcher_button_launch.mp3"
+      ></audio>
+
+      <!-- POP UP 2-->
+      <section class="popUpStart hidden">
+        <div class="popUpStartContent">
+          <h2 class="context">CONTEXT</h2>
+          <button class="enterBtn" id="enterBtn">PRESS ENTER TO START</button>
+        </div>
+      </section>
 
       <script src="./main.js"></script>
     </div>
