--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
       <!-- POP UP-->
       <section class="popUp hidden">
         <div class="popUpContent">
-          <h2 class="gameover">FAKE NEWS</h2>
-          <h3>You lost :(</h3>
+          <h2 class="gameover">FAKE NEWS, YOU LOST!</h2>
           <button class="tryagain" id="tryagain">TRY AGAIN</button>
         </div>
       </section>
