--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lucid Nightmare</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="img/fav.ico" type="image/x-icon">
   </head>
   <body>
     <div class="containAll">
