--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         />
         <div class="rightSection" id="itemsCount">
           <h3 class="scorebar">
-            Items: <span id="itemsCaught">0</span> /
+            Corgis: <span id="itemsCaught">0</span> /
             <span id="itemsTotal">15</span>
           </h3>
         </div>
@@ -60,7 +60,7 @@
       ></audio>
       <audio controls class="ps2" src="audio/ps2_start_up.mp3"></audio>
 
-      <!-- POP UP 2-->
+      <!-- POP UP START GAME-->
       <section class="popUpStart hidden">
         <div class="popUpStartContent">
           <div class="words word-1">
